...
    <string name="guided_brushing_legend_missed">"Missed"</string>
    <string name="guided_brushing_legend_brushing_segment">"Brushing segment"</string>
    <string name="ok">"OK"</string>
    <string name="something_went_wrong">"Something went wrong. Please try again later."</string>
    <string name="settings_section_brushing_details_title">"%1$s's brusher details"</string>
...
    <string name="guided_brushing_start_screen_no_more_smiles">"Earn 2 points each time you play, up to 6 points per day."</string>
    <string name="guided_brushing_start_screen_start_button">"LET’S START"</string>
    <string name="cancel">"Cancel"</string>
    <string name="settings_vibration_levels">"Brushing program"</string>
    <string name="brushing_sync_progress_text">"syncing brushing sessions: %d%%"</string>
...
    <string name="checkup_your_results">"Your results."</string>
    <string name="checkup_brushing_summary">"Brushing summary"</string>
    <string name="save_changes">"Save Changes"</string>

    <!-- Fuzzy -->
...
    <!-- Fuzzy -->
    <string name="settings_share_your_data_description">"Help us improve the accuracy of the motion sensors by sending us your brushing data anonymously"</string>
    <string name="tb_settings_toolbar_title">"Brush details"</string>
    <string name="tb_settings_connect_new_tb">"Connect a New Brush"</string>
    <string name="tb_settings_connected">"%s connected"</string>
    <string name="tb_settings_last_sync">"Last sync: %s"</string>
    <string name="tb_settings_last_sync_never">"never"</string>
    <string name="tb_settings_last_sync_today">"today"</string>

    <!-- Please remember that this string needs to contain `checkup_headline_highlight` (like trailing fullstop) - otherwise highlight won't be rendered -->
...
    <string name="pairing_start_connect">"Connect my brush now"</string>
    <string name="pairing_start_shop">"Shop toothbrushes"</string>
    <string name="tb_settings_brush_details_header">"brush details"</string>
    <string name="tb_settings_brush_details_model">"toothbrush model"</string>
    <string name="tb_settings_brush_details_serial">"serial number"</string>
    <string name="tb_settings_brush_details_mac">"mac address"</string>
    <string name="tb_settings_brush_details_firmware">"firmware version"</string>
    <string name="tb_settings_brush_details_hardware">"hardware version"</string>
    <string name="tb_settings_brush_details_bootloader">"bootloader version"</string>
    <string name="tb_settings_identify">"Identify"</string>
    <string name="tb_settings_blink">"Make your brush blink"</string>
    <string name="settings_brushing_time">"Brushing Time"</string>
    <plurals name="settings_brushing_time_format_minutes">
...
    <string name="settings_brushing_time_seconds_label">"seconds"</string>
    <string name="settings_share_your_data_learn_more">"Learn more"</string>
    <string name="tb_settings_battery_level">"Battery Level"</string>
    <string name="tb_settings_brush_condition_header">"Brush condition"</string>

...
    <string name="guided_brushing_pause_menu_restart_button">"Restart"</string>
    <string name="guided_brushing_pause_menu_quit_button">"Quit"</string>
    <string name="tb_settings_head_condition_header">"Brush head condition"</string>
    <string name="tb_settings_head_condition_reset_counter">"Reset counter"</string>
    <string name="tb_settings_head_condition_buy_new">"Buy new"</string>
    <string name="tb_settings_head_condition_last_replaced_date">"Last replaced on %s"</string>
    <string name="tb_settings_head_condition_good">"Good"</string>
    <string name="tb_settings_head_condition_getting_older">"Getting older"</string>
    <string name="tb_settings_head_condition_needs_replacing">"Needs replacing"</string>
...
    <string name="onboarding_sign_up_google_button">"Sign up with Google"</string>
    <string name="push_notification_channel_night_watch">"Offline Brushings"</string>
    <string name="tb_settings_nickname_and_user_header">"Nickname"</string>
    <string name="tb_settings_nickname_title">"Brush nickname"</string>
    <string name="tb_settings_edit_nickname_dialog_hint">"NAME YOUR HUM BRUSH"</string>
    <string name="tb_settings_help_center">"Help center articles"</string>
    <string name="tb_settings_forget_tb">"Forget this toothbrush"</string>
    <string name="push_notification_channel_general">"General notifications"</string>
    <string name="checkup_title_highlight">"."</string>
...
    <string name="home_error_no_toothbrush_connected_close">"CLOSE"</string>
    <string name="toolbox_home_explanation_title">"Tap wherever you see a tour point like this one to help you find your way around!"</string>
    <string name="tb_settings_connect_new_tb_forget_old_one">"In order to add a new toothbrush, you need to forget the one that is connected."</string>
    <string name="tb_settings_optional_ota_title">"New firmware update available for your brush!"</string>
    <string name="tb_settings_optional_ota_proceed">"Update"</string>
    <string name="tb_settings_connecting">"connecting"</string>
    <string name="tb_settings_waiting">"Wait, I'm trying to find your toothbrush"</string>
    <string name="tb_settings_not_connecting">"Not connecting?"</string>
    <string name="not_connecting_help_center_link">"https://humbycolgate.zendesk.com/hc/en-us/articles/360014456139"</string>
...
    <string name="settings_about_screen_instagram">"Instagram"</string>
    <string name="dialog_test_brushing_no_more_smiles">"Earn 2 smile points every time you play, and up to 6 points a day!"</string>
    <string name="tb_settings_mandatory_ota_title">"Toothbrush failed to update, start the recovery!"</string>
    <string name="tb_settings_mandatory_ota_proceed">"RECOVER"</string>
    <string name="mandatory_ota_dialog_title">"mandatory update needed"</string>

...
