...
      android:textAppearance="?textAppearanceOverline1"
      android:textColor="?colorOnSecondary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/divider_top" />

    <ImageView
      android:id="@+id/blink_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dot_quad"
      android:layout_marginTop="@dimen/dot_double"
      android:enabled="@{item.identifyPossible}"
      android:src="@drawable/ic_blink"
...
      app:layout_constraintBottom_toBottomOf="@id/blink_icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/blink_icon"
      app:layout_constraintTop_toTopOf="@id/blink_icon" />

    <View
      android:id="@+id/blink_toothbrush_view"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="@dimen/match_constraints"
      android:layout_marginBottom="@dimen/dot"
      android:background="?selectableItemBackground"
      android:clickable="@{item.identifyPossible}"
      android:onClick="@{v -> interaction.onIdentifyClick()}"
...
