...
      app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
      app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
      app:layout_constraintTop_toBottomOf="@id/tb_status_icon"
      tools:text="HUM1 connected" />

    <TextView
      android:id="@+id/tb_last_sync"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dot_quad"
      android:layout_marginTop="@dimen/dot_half"
      android:layout_marginEnd="@dimen/dot_quad"
      android:gravity="center"
...
      app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
      app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
      app:layout_constraintTop_toBottomOf="@id/tb_last_sync"
      tools:visibility="gone" />

    <Button
      android:id="@+id/not_connecting"
      style="?materialButtonOutlinedIconStyle"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dot_trip"
      android:onClick="@{() -> interaction.onNotConnectingClick()}"
      android:text="@string/tb_settings_not_connecting"
...
